# Orbit-Shield

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN.md  PROJECT_STATUS.md  README.md  docker-compose.yml  vercel.json
backend/: .dockerignore  Dockerfile  alembic.ini  check_db.py  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_cdm_id.py
backend/models/: conjunction_risk_classifier.joblib  conjunction_risk_classifier.meta.json  covariance_estimator.joblib  covariance_estimator.meta.json
backend/scripts/: backfill_ml.py  download_cdms.py  seed_demo.py
backend/src/: config.py  main.py
backend/src/alerts/: evaluator.py  notifier.py
backend/src/api/: schemas.py  websocket.py
backend/src/api/routes/: __init__.py  alerts.py  conjunctions.py  ml.py  positions.py  propagation.py  satellites.py
backend/src/db/: models.py  schemas.py  session.py
backend/src/ingestion/: cdm_parser.py  cdm_store.py  celestrak.py  socrates.py  spacetrack.py  tasks.py  weather.py
backend/src/ml/: __init__.py  config.py  inference.py  registry.py  tasks.py
backend/src/ml/features/: conjunction.py  (+2 more)
backend/src/propagation/: probability.py  screening.py  sgp4_engine.py  tasks.py
backend/tests/: conftest.py  test_alerts.py  test_api_alerts.py  test_api_conjunctions.py  test_api_ml.py  test_api_propagation.py  test_api_satellites.py  test_probability.py  test_screening.py
backend/tests/test_ml/: test_conjunction_risk.py  test_covariance.py  test_features.py  test_inference.py  test_registry.py  test_synthetic.py
(+39 files in other folders)
